syntax = "proto3";
package model;
option go_package = ".;mall";

// Subject 专题
message Subject {
  uint64 id = 1; // 主键
  uint64 category_id = 2; // 分类id
  string title = 3; // 标题
  string pic = 4; // 专题主图
  uint32 product_count = 5; // 关联产品数量
  uint32 recommend_status = 6; // 推荐状态
  uint32 create_time = 7; // 创建时间
  uint32 collect_count = 8; // 收藏数量
  uint32 read_count = 9; // 阅读数量
  uint32 comment_count = 10; // 评论数量
  string album_pics = 11; // 画册图片，用逗号分割
  string description = 12; // 描述
  uint32 show_status = 13; // 显示状态：0->不显示；1->显示
  string content = 14; // 内容
  uint32 forward_count = 15; // 转发数
  string category_name = 16; // 专题分类名称
}